Attempt to fix weird viewport issues on mobile
Especially Brave, which has a URL bar on top and tab UI on bottom.

--- a/cns/html/cns.css
+++ b/cns/html/cns.css
@@ -21,6 +21,7 @@ body {
   /* The body is black and only occupies the screen size. */
   background: black;
   overflow: hidden;
+  height: 100dvh;
   position: relative;
 }
 
@@ -31,7 +32,9 @@ body {
   background: white;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  height: 100vh;
+
+  position: relative;
+  height: 100dvh;
 
   /* The game area fades in and out when we go to/from splash/credits. */
   transition: opacity 2s linear;
@@ -61,7 +64,7 @@ body[data-mode="play"] #menus {
   display: block;
 }
 
-body { /* and #vorple, which can't z-index */
+body, #vorple {
   z-index: 0;
 }
 #menus {
@@ -77,12 +80,6 @@ body { /* and #vorple, which can't z-index */
 /* Vorple comes with a min-height that messes up our mobile sizing. */
 #vorple {
   min-height: 0;
-}
-
-/* For mobile devices, add some top padding to make sure all content clears the
- * URL bar.  This is an issue on Brave. */
-body[data-mobile="true"] #vorple {
-  padding-top: 2em;
 }
 
 body[data-auto-complete="false"] #auto-complete {
@@ -109,7 +106,7 @@ body[data-auto-complete="false"] #auto-complete {
 
   margin: 0;
   padding: 2vh 2vw;
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
 
   overflow: hidden;
@@ -181,7 +178,7 @@ img.cover {
 #creditsWrapper {
   display: flex;
   animation: 90s linear 2s credits-scroll-and-fade;
-  top: 100vh;
+  top: 100dvh;
   position: relative;
 
   max-width: calc(min(180vh, 90vw));
@@ -206,7 +203,7 @@ img.cover {
 
 @keyframes credits-scroll-and-fade {
   0% {
-    top: 100vh;
+    top: 100dvh;
     opacity: 1;
   }
   90% {
@@ -373,7 +370,7 @@ body[data-difficulty="easy"] .interesting-highlight,
   /* Position in the middle of the page, overlaying everything else. */
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -395,7 +392,7 @@ body[data-difficulty="easy"] .interesting-highlight,
 
   /* Limit the size of the card. */
   max-width: calc(min(100vw - 6em, 60rem));
-  max-height: calc(100vh - 6em);
+  max-height: calc(100dvh - 6em);
   margin: 3em;
   padding: 2em;
 
